# trajectories

./: .gitignore  README.md  export.sh  pyproject.toml  setup_env.sh
scripts/: optimize.py  plot.py
src/scripts/: optimize.py  plot.py  plot_params.py  plot_values.py
src/trajectories/: constants.py  objectives.py  optimization.py  pareto_sets.py  paths.py  plotters.py  plotting.py  plotting_utils.py
