[project]
name = "trajectories"
version = "0.1.0"
description = "Optimization of simple functions with JD and plot of the trajectories."
authors = [
    {name = "Valérian Rey", email = "valerian.rey@gmail.com"},
]
dependencies = [
    "torch>=2.0",
    "torchjd>=0.2.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
