[project]
name = "trajectories"
version = "0.1.0"
description = "Optimization of simple functions with JD and plot of the trajectories."
authors = [
    {name = "Valérian Rey", email = "valerian.rey@gmail.com"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "torchjd>=0.2.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
]

[dependency-groups]
check = [
    "pre-commit>=2.9.2"  # isort doesn't work before 2.9.2
]

[project.scripts]
optimize = "scripts.optimize:main"
plot = "scripts.plot:main"
