[project]
name = "trajectories"
version = "0.1.0"
description = "Optimization of simple functions with JD and plot of the trajectories."
authors = [
    {name = "Valérian Rey", email = "valerian.rey@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "docopt>=0.6.2",
]

[dependency-groups]
check = [
    "pre-commit>=2.9.2"  # isort doesn't work before 2.9.2
]

[project.scripts]
optimize = "scripts.optimize:main"
plot_params = "scripts.plot_params:main"
plot_values = "scripts.plot_values:main"
